--- a/index.html
+++ b/index.html
@@ -4,21 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
+    <title>Главная</title>
+    
 </head>
 <body>
     <!-- Шапка -->
-    <header>
-        <a href="#">Webstudio</a>
+    <header class="header">
+        <a href="index.html" class="main-page-link">Web<span class="main-page-link-logo">Studio</span></a>
         <nav>
             <ul>
-                <li><a href="#">Студия</a></li>
-                <li><a href="#">Портфолио</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="index.html" class="nav-sections">Студия</a></li>
+                <li><a href="portfolio.html" class="nav-sections">Портфолио</a></li>
+                <li><a href="#" class="nav-sections">Контакты</a></li>
             </ul>  
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <a href="mailto:info@devstudio.com" class="main-mail-header">info@devstudio.com</a>
+        <a href="tel:+380961111111" class="main-phone-header">+38 096 111 11 11</a>
     </header>
 
     <!-- Основная часть -->
@@ -26,36 +31,36 @@
     <main>
 
         <!-- Реклама с кнопкой -->
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+        <section class="main-page-face">
+            <h1 class="main-page-face-text">Эффективные решения для вашего бизнеса</h1>
+            <button type="button" class="main-page-face-button">Заказать услугу</button>
         </section>
 
         <!-- Характеристика -->
         <section>
             <ul>
                 <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <h3 class="main-page-specifications-title">Внимание к деталям</h3>
+                    <p class="main-page-specifications-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <h3 class="main-page-specifications-title">Пунктуальность</h3>
+                    <p class="main-page-specifications-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <h3 class="main-page-specifications-title">Планирование</h3>
+                    <p class="main-page-specifications-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <h3 class="main-page-specifications-title">Современные технологии</h3>
+                    <p class="main-page-specifications-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
 
         <!-- Род занятия в картинках -->
         <section>
-            <h2>Чем мы занимаемся</h2>
+            <h2 class="main-page-titles">Чем мы занимаемся</h2>
             <ul>
                 <li>
                     <img src="images/img1.jpg" alt="програмирование" width="370">
@@ -70,39 +75,39 @@
         </section>
 
         <!-- Команда специалистов -->
-        <section>
-            <h2>Наша команда</h2>
+        <section class="main-page-team">
+            <h2 class="main-page-titles">Наша команда</h2>
             <ul>
-                <li>
+                <li class="main-page-team-teaser">
                     <img src="images/team1.jpg" alt="мужчина" width="270" height="260">
-                    <h3>Игорь Демьяненко</h3>
-                    <h4>Product Designer</h4>
+                    <h3 class="main-page-team-name">Игорь Демьяненко</h3>
+                    <h4 class="main-page-team-position">Product Designer</h4>
                 </li>
-                <li>
+                <li class="main-page-team-teaser">
                     <img src="images/team2.jpg" alt="женщина" width="270" height="260">
-                    <h3>Ольга Репина</h3>
-                    <h4>Frontend Developer</h4>
+                    <h3 class="main-page-team-name">Ольга Репина</h3>
+                    <h4 class="main-page-team-position">Frontend Developer</h4>
                 </li>
-                <li>
+                <li class="main-page-team-teaser">
                     <img src="images/team3.jpg" alt="мужчина" width="270" height="260">
-                    <h3>Николай Тарасов</h3>
-                    <h4>Marketing</h4>
+                    <h3 class="main-page-team-name">Николай Тарасов</h3>
+                    <h4 class="main-page-team-position">Marketing</h4>
                 </li>
-                <li>
+                <li class="main-page-team-teaser">
                     <img src="images/team4.jpg" alt="мужчина" width="270" height="260">
-                    <h3>Михаил Ермаков</h3>
-                    <h4>UI Designer</h4>
+                    <h3 class="main-page-team-name">Михаил Ермаков</h3>
+                    <h4 class="main-page-team-position">UI Designer</h4>
                 </li>
             </ul>
         </section>
     </main>
 
     <!-- Подвал-->
-    <footer>
-        <a href="#">Webstudio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+    <footer class="footer">
+        <a href="index.html" class="main-page-link">Web<span class="main-page-link-logo">Studio</span></a>
+        <address class="footer-address">г. Киев, пр-т Леси Украинки, 26
+            <a href="mailto:info@devstudio.com" class="main-mail-footer">info@devstudio.com</a>
+            <a href="tel:+380961111111" class="main-phone-footer">+38 096 111 11 11</a>
         </address>
     </footer>
 </body>
