--- a/portfolio.html
+++ b/portfolio.html
@@ -4,35 +4,109 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
+    <title>Портфолио</title>
 </head>
 <body>
     <!-- Шапка -->
-    <header>
-        <a href="#">Webstudio</a>
+    <header class="header">
+        <a href="index.html" class="main-page-link">Web<span class="main-page-link-logo">Studio</span></a>
         <nav>
             <ul>
-                <li><a href="#">Студия</a></li>
-                <li><a href="#">Портфолио</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="index.html" class="nav-sections">Студия</a></li>
+                <li><a href="portfolio.html" class="nav-sections">Портфолио</a></li>
+                <li><a href="#" class="nav-sections">Контакты</a></li>
             </ul>  
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <a href="mailto:info@devstudio.com" class="main-mail-header">info@devstudio.com</a>
+        <a href="tel:+380961111111" class="main-phone-header">+38 096 111 11 11</a>
     </header>
 
     <!-- Основная часть -->
 
     <main>
 
+        <!--Фильтры-->
+        <ul>
+            <li>
+                <button type="button" class="portfolio-categories-button">Все</button>
+            </li>
+            <li>
+                <button type="button" class="portfolio-categories-button">Веб-сайты</button>
+            </li>
+            <li>
+                <button type="button" class="portfolio-categories-button">Приложения</button>
+            </li>
+            <li>
+                <button type="button" class="portfolio-categories-button">Дизайн</button>
+            </li>
+            <li>
+                <button type="button" class="portfolio-categories-button">Маркетинг</button>
+            </li>
+        </ul>  
+
+        <!--Варианты для фильтра-->
+        <section>
+            <ul>
+                <li class="portfolio-variants">
+                    <img src="images/portf1.jpg" alt="ноутбук" width="370">
+                    <h3 class="portfolio-variant-name">Технокряк</h3>
+                    <h4 class="portfolio-variant-type">Веб-сайт</h4>
+                </li>
+                <li class="portfolio-variants">
+                    <img src="images/portf2.jpg" alt="баскетболисты" width="370">
+                    <h3 class="portfolio-variant-name">Постер New Orlean vs Golden Star</h3>
+                    <h4 class="portfolio-variant-type">Дизайн</h4>
+                </li>
+                <li>
+                    <img src="images/portf3.jpg" alt="морской ресторан" width="370">
+                    <h3 class="portfolio-variant-name">Ресторан Seafood</h3>
+                    <h4 class="portfolio-variant-type">Приложение</h4>
+                </li>
+                <li class="portfolio-variants">
+                    <img src="images/portf4.jpg" alt="наушники" width="370">
+                    <h3 class="portfolio-variant-name">Проект Prime</h3>
+                    <h4 class="portfolio-variant-type">Маркетинг</h4>
+                </li>
+                <li class="portfolio-variants">
+                    <img src="images/portf5.jpg" alt="коробки" width="370">
+                    <h3 class="portfolio-variant-name">Проект Boxes</h3>
+                    <h4 class="portfolio-variant-type">Приложение</h4>
+                </li>
+                <li class="portfolio-variants">
+                    <img src="images/portf6.jpg" alt="монитор" width="370">
+                    <h3 class="portfolio-variant-name">Inspiration has no Borders</h3>
+                    <h4 class="portfolio-variant-type">Веб-сайт</h4>
+                </li>
+                <li class="portfolio-variants">
+                    <img src="images/portf7.jpg" alt="книга" width="370">
+                    <h3 class="portfolio-variant-name">Издание Limited Edition</h3>
+                    <h4 class="portfolio-variant-type">Дизайн</h4>
+                </li>
+                <li class="portfolio-variants">
+                    <img src="images/portf8.jpg" alt="бирка" width="370">
+                    <h3 class="portfolio-variant-name">Проект LAB</h3>
+                    <h4 class="portfolio-variant-type">Маркетинг</h4>
+                </li>
+                <li class="portfolio-variants">
+                    <img src="images/portf9.jpg" alt="печатание на ноутбуке" width="370">
+                    <h3 class="portfolio-variant-name">Growing Business</h3>
+                    <h4 class="portfolio-variant-type">Приложение</h4>
+                </li>
+            </ul>
+        </section>
+
     </main>
 
     <!-- Подвал-->
-    <footer>
-        <a href="#">Webstudio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+    <footer class="footer">
+        <a href="index.html" class="main-page-link">Web<span class="main-page-link-logo">Studio</span></a>
+        <address class="footer-address">г. Киев, пр-т Леси Украинки, 26
+            <a href="mailto:info@devstudio.com" class="main-mail-footer">info@devstudio.com</a>
+            <a href="tel:+380961111111" class="main-phone-footer">+38 096 111 11 11</a>
         </address>
     </footer>
 </body>
