--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="index.html" class="main-page-link">Web<span class="main-page-link-logo">Studio</span></a>
         <nav>
             <ul>
-                <li><a href="index.html" class="nav-sections">Студия</a></li>
+                <li><a href="index.html" class="nav-sections active">Студия</a></li>
                 <li><a href="portfolio.html" class="nav-sections">Портфолио</a></li>
                 <li><a href="#" class="nav-sections">Контакты</a></li>
             </ul>  
@@ -81,22 +81,22 @@
                 <li class="main-page-team-teaser">
                     <img src="images/team1.jpg" alt="мужчина" width="270" height="260">
                     <h3 class="main-page-team-name">Игорь Демьяненко</h3>
-                    <h4 class="main-page-team-position">Product Designer</h4>
+                    <p class="main-page-team-position">Product Designer</p>
                 </li>
                 <li class="main-page-team-teaser">
                     <img src="images/team2.jpg" alt="женщина" width="270" height="260">
                     <h3 class="main-page-team-name">Ольга Репина</h3>
-                    <h4 class="main-page-team-position">Frontend Developer</h4>
+                    <p class="main-page-team-position">Frontend Developer</p>
                 </li>
                 <li class="main-page-team-teaser">
                     <img src="images/team3.jpg" alt="мужчина" width="270" height="260">
                     <h3 class="main-page-team-name">Николай Тарасов</h3>
-                    <h4 class="main-page-team-position">Marketing</h4>
+                    <p class="main-page-team-position">Marketing</p>
                 </li>
                 <li class="main-page-team-teaser">
                     <img src="images/team4.jpg" alt="мужчина" width="270" height="260">
                     <h3 class="main-page-team-name">Михаил Ермаков</h3>
-                    <h4 class="main-page-team-position">UI Designer</h4>
+                    <p class="main-page-team-position">UI Designer</p>
                 </li>
             </ul>
         </section>
