--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li><a href="index.html" class="nav-sections">Студия</a></li>
-                <li><a href="portfolio.html" class="nav-sections">Портфолио</a></li>
+                <li><a href="portfolio.html" class="nav-sections active">Портфолио</a></li>
                 <li><a href="#" class="nav-sections">Контакты</a></li>
             </ul>  
         </nav>
@@ -30,71 +30,90 @@
     <main>
 
         <!--Фильтры-->
-        <ul>
-            <li>
-                <button type="button" class="portfolio-categories-button">Все</button>
-            </li>
-            <li>
-                <button type="button" class="portfolio-categories-button">Веб-сайты</button>
-            </li>
-            <li>
-                <button type="button" class="portfolio-categories-button">Приложения</button>
-            </li>
-            <li>
-                <button type="button" class="portfolio-categories-button">Дизайн</button>
-            </li>
-            <li>
-                <button type="button" class="portfolio-categories-button">Маркетинг</button>
-            </li>
-        </ul>  
-
-        <!--Варианты для фильтра-->
         <section>
             <ul>
-                <li class="portfolio-variants">
-                    <img src="images/portf1.jpg" alt="ноутбук" width="370">
-                    <h3 class="portfolio-variant-name">Технокряк</h3>
-                    <h4 class="portfolio-variant-type">Веб-сайт</h4>
-                </li>
-                <li class="portfolio-variants">
-                    <img src="images/portf2.jpg" alt="баскетболисты" width="370">
-                    <h3 class="portfolio-variant-name">Постер New Orlean vs Golden Star</h3>
-                    <h4 class="portfolio-variant-type">Дизайн</h4>
+                <li>
+                    <button type="button" class="portfolio-categories-button">Все</button>
                 </li>
                 <li>
-                    <img src="images/portf3.jpg" alt="морской ресторан" width="370">
-                    <h3 class="portfolio-variant-name">Ресторан Seafood</h3>
-                    <h4 class="portfolio-variant-type">Приложение</h4>
+                    <button type="button" class="portfolio-categories-button">Веб-сайты</button>
+                </li>
+                <li>
+                    <button type="button" class="portfolio-categories-button">Приложения</button>
+                </li>
+                <li>
+                    <button type="button" class="portfolio-categories-button">Дизайн</button>
+                </li>
+                <li>
+                    <button type="button" class="portfolio-categories-button">Маркетинг</button>
+                </li>
+            </ul>  
+
+            <!--Варианты для фильтра-->
+        
+            <ul>
+                <li class="portfolio-variants">
+                    <a href="#">
+                        <img src="images/portf1.jpg" alt="ноутбук" width="370">
+                        <h3 class="portfolio-variant-name">Технокряк</h3>
+                        <p class="portfolio-variant-type">Веб-сайт</p>
+                    </a>   
                 </li>
                 <li class="portfolio-variants">
-                    <img src="images/portf4.jpg" alt="наушники" width="370">
-                    <h3 class="portfolio-variant-name">Проект Prime</h3>
-                    <h4 class="portfolio-variant-type">Маркетинг</h4>
+                    <a href="">
+                        <img src="images/portf2.jpg" alt="баскетболисты" width="370">
+                        <h3 class="portfolio-variant-name">Постер New Orlean vs Golden Star</h3>
+                        <p class="portfolio-variant-type">Дизайн</p>  
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="images/portf3.jpg" alt="морской ресторан" width="370">
+                        <h3 class="portfolio-variant-name">Ресторан Seafood</h3>
+                        <p class="portfolio-variant-type">Приложение</p>
+                    </a> 
                 </li>
                 <li class="portfolio-variants">
-                    <img src="images/portf5.jpg" alt="коробки" width="370">
-                    <h3 class="portfolio-variant-name">Проект Boxes</h3>
-                    <h4 class="portfolio-variant-type">Приложение</h4>
+                    <a href="#">
+                        <img src="images/portf4.jpg" alt="наушники" width="370">
+                        <h3 class="portfolio-variant-name">Проект Prime</h3>
+                        <p class="portfolio-variant-type">Маркетинг</p>
+                    </a>
                 </li>
                 <li class="portfolio-variants">
-                    <img src="images/portf6.jpg" alt="монитор" width="370">
-                    <h3 class="portfolio-variant-name">Inspiration has no Borders</h3>
-                    <h4 class="portfolio-variant-type">Веб-сайт</h4>
+                    <a href="#">
+                        <img src="images/portf5.jpg" alt="коробки" width="370">
+                        <h3 class="portfolio-variant-name">Проект Boxes</h3>
+                        <p class="portfolio-variant-type">Приложение</p>
+                    </a>
                 </li>
                 <li class="portfolio-variants">
-                    <img src="images/portf7.jpg" alt="книга" width="370">
-                    <h3 class="portfolio-variant-name">Издание Limited Edition</h3>
-                    <h4 class="portfolio-variant-type">Дизайн</h4>
+                    <a href="#">
+                        <img src="images/portf6.jpg" alt="монитор" width="370">
+                        <h3 class="portfolio-variant-name">Inspiration has no Borders</h3>
+                        <p class="portfolio-variant-type">Веб-сайт</p>
+                    </a>
                 </li>
                 <li class="portfolio-variants">
-                    <img src="images/portf8.jpg" alt="бирка" width="370">
-                    <h3 class="portfolio-variant-name">Проект LAB</h3>
-                    <h4 class="portfolio-variant-type">Маркетинг</h4>
+                    <a href="#">
+                        <img src="images/portf7.jpg" alt="книга" width="370">
+                        <h3 class="portfolio-variant-name">Издание Limited Edition</h3>
+                        <p class="portfolio-variant-type">Дизайн</p>
+                    </a>
                 </li>
                 <li class="portfolio-variants">
-                    <img src="images/portf9.jpg" alt="печатание на ноутбуке" width="370">
-                    <h3 class="portfolio-variant-name">Growing Business</h3>
-                    <h4 class="portfolio-variant-type">Приложение</h4>
+                    <a href="#">
+                        <img src="images/portf8.jpg" alt="бирка" width="370">
+                        <h3 class="portfolio-variant-name">Проект LAB</h3>
+                        <p class="portfolio-variant-type">Маркетинг</p>
+                    </a>
+                </li>
+                <li class="portfolio-variants">
+                    <a href="#">
+                        <img src="images/portf9.jpg" alt="печатание на ноутбуке" width="370">
+                        <h3 class="portfolio-variant-name">Growing Business</h3>
+                        <p class="portfolio-variant-type">Приложение</p>
+                    </a>
                 </li>
             </ul>
         </section>
